<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCCCE3"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/scriptureBook"
        android:layout_width="187dp"
        android:layout_height="46dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/edit_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addingBook"
        android:layout_width="381dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="187dp"
        android:layout_marginBottom="32dp"
        android:rotationX="-30"
        android:text="Type in your favorite scripture"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/scriptureBook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/little_title" />

    <EditText
        android:id="@+id/scriptureChapter"
        android:layout_width="184dp"
        android:layout_height="42dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="102dp"
        android:layout_height="42dp"
        android:layout_marginStart="25dp"
        android:onClick="sendMessage"
        android:text="@string/button_send"
        app:iconTint="@color/purple_500"
        app:layout_constraintBaseline_toBaselineOf="@+id/loadScripture"
        app:layout_constraintEnd_toStartOf="@+id/loadScripture"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loadScripture"
        android:layout_width="192dp"
        android:layout_height="39dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="212dp"
        android:text="@string/load_scripture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3" />

    <EditText
        android:id="@+id/scriptureVerse"
        android:layout_width="186dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/scriptureChapter" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="147dp"
        android:layout_height="34dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="104dp"
        android:text="Book:"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/scriptureBook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="139dp"
        android:layout_height="44dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:text="Chapter:"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/scriptureChapter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="134dp"
        android:layout_height="30dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="40dp"
        android:text="Verse:"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/scriptureVerse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/scriptureRetrieved"
        android:layout_width="157dp"
        android:layout_height="43dp"
        android:text="@string/retrieved_scripture"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadScripture"
        app:layout_constraintVertical_bias="0.28" />

</androidx.constraintlayout.widget.ConstraintLayout>